# midi-smith

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  LICENSE  STM32H743XX_FLASH.ld  adc-board.ioc
firmwares/adc-board/: .mxproject  CMakeLists.txt  adc-board.ioc
firmwares/adc-board/Core/Inc/: FreeRTOSConfig.h  stm32h7xx_it.h
firmwares/adc-board/Core/Src/: fdcan.c  freertos.c  stm32h7xx_it.c
firmwares/adc-board/app/src/: app_entry.cpp  application.cpp
firmwares/adc-board/bsp/src/: board.cpp  pins.cpp  rtt_telemetry_sender.cpp
firmwares/adc-board/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
firmwares/adc-board/docs/: stm32cubemx-configuration-guide.md
firmwares/adc-board/docs/design/: dsp-workflow.md
firmwares/adc-board/os/src/: runtime_stats.cpp
firmwares/adc-board/temp/: benchmark-cpuload.md  flow
firmwares/adc-board/temp/dsp-test/: forte.raw  pianissimo-3000hz.csv  pianissimo.csv  rest-3000hz.csv  rest.csv  rest.raw
firmwares/adc-board/tests/: CMakeLists.txt
firmwares/main-board/: .mxproject  CMakeLists.txt  STM32H7B0XX_FLASH.ld  main-board.ioc
firmwares/main-board/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
firmwares/main-board/Core/Src/: fdcan.c  freertos.c  main.c  octospi.c  stm32h7xx_it.c  tim.c  usart.c
firmwares/main-board/USB_DEVICE/App/: usbd_audio_if.c  usbd_audio_if.h  usbd_desc.c
firmwares/main-board/app/src/: application.cpp  version.cpp
firmwares/main-board/bsp/src/: board.cpp  spi.cpp  stm32_spi_flash.cpp  usb_midi.cpp
firmwares/main-board/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
firmwares/main-board/cmake/stm32cubemx/: CMakeLists.txt
firmwares/main-board/docs/: cpp-style.md  stm32cubemx-configuration-guide.md  stm32cubemx-configuration.md
firmwares/main-board/domain/src/: keymap_lookup.cpp  main_board_config.cpp
firmwares/main-board/tests/: CMakeLists.txt
firmwares/main-board/tests/domain/: adc_board_controller.test.cpp  adc_boards_controller.test.cpp
libs/bsp/: CMakeLists.txt
libs/bsp/include/bsp/: gpio.hpp  gpio_requirements.hpp  rtt_logger.hpp  rtt_telemetry_sender.hpp
libs/bsp/src/: gpio.cpp  rtt_logger.cpp  rtt_telemetry_sender.cpp
libs/bsp/src/can/: can_bus_stats.cpp  fdcan_transceiver.cpp
libs/config/tests/: CMakeLists.txt  config_validator.test.cpp  crc32.test.cpp  storage_manager.test.cpp  transactional_config_dictionary.test.cpp
libs/dsp/tests/: CMakeLists.txt
libs/dsp/tests/converters/: linear_scaler.test.cpp  tia_current_converter.test.cpp
libs/dsp/tests/engine/: decimated.test.cpp  observers.test.cpp  temporal_continuity_guard.test.cpp  test_stubs.hpp  workflow.test.cpp
libs/dsp/tests/filters/: biquad.test.cpp  constant_filter.test.cpp  ema_filter.test.cpp  identity_filter.test.cpp  max_filter.test.cpp  min_filter.test.cpp  sg5_smoother.test.cpp  simple_moving_average.test.cpp
libs/dsp/tests/logic/: and.test.cpp  gate_open.test.cpp  input_gate.test.cpp  is_false.test.cpp  is_true.test.cpp  or.test.cpp  switch.test.cpp
libs/dsp/tests/math/: backward_difference.test.cpp  central_difference.test.cpp  sliding_linear_regression.test.cpp
libs/io/: CMakeLists.txt  CMakePresets.json
libs/io/include/io/: stream_format.hpp  stream_requirements.hpp
libs/io/tests/: CMakeLists.txt  stream_format.test.cpp
libs/logging/: CMakeLists.txt
libs/logging/include/logging/: logger_requirements.hpp
libs/midi/: CMakeLists.txt
libs/midi/include/midi/: midi_controller_requirements.hpp  midi_transport_requirements.hpp  transport_status.hpp  types.hpp
libs/os/: CMakeLists.txt
libs/os/include/os/: binary_semaphore.hpp  clock.hpp  memory.hpp  mutex.hpp  os_uptime_provider.hpp  queue.hpp  queue_requirements.hpp  runtime_stats.hpp  runtime_stats_requirements.hpp  task.hpp  this_task.hpp  timer.hpp
libs/os/src/: binary_semaphore.cpp  clock.cpp  memory.cpp  mutex.cpp  os_uptime_provider.cpp  queue.cpp  runtime_stats.cpp  task.cpp  this_task.cpp  timer.cpp
libs/piano-controller/: CMakeLists.txt
libs/piano-controller/include/piano-controller/: midi_piano.hpp  (+1 more)
libs/piano-controller/src/: midi_piano.cpp
libs/piano-controller/tests/: CMakeLists.txt  midi_piano.test.cpp
libs/piano-sensing/: CMakeLists.txt
libs/piano-sensing/tests/: CMakeLists.txt  composite_sensor_event_handler.test.cpp  midi_velocity_engine.test.cpp  note_release_detector_stage.test.cpp
libs/sensor-linearization/: CMakeLists.txt
libs/sensor-linearization/tests/: CMakeLists.txt  lookup_table_generator.test.cpp  sensor_linear_processor.test.cpp  sensor_response_curve.test.cpp
libs/shell/: CMakeLists.txt
libs/shell-cmd-can-stats/: CMakeLists.txt
libs/shell-cmd-can-stats/src/: can_stats_command.cpp
libs/shell-cmd-can-stats/tests/: CMakeLists.txt  can_stats_command.test.cpp
libs/shell-cmd-config/: CMakeLists.txt
libs/shell-cmd-config/src/: config_command.cpp
libs/shell-cmd-config/tests/: CMakeLists.txt  config_command.test.cpp
libs/shell-cmd-os-stats/: CMakeLists.txt
libs/shell-cmd-os-stats/src/: ps_command.cpp  shell_cmd_os_stats_utils.hpp  status_command.cpp
libs/shell-cmd-os-stats/tests/: CMakeLists.txt  ps_command.test.cpp  status_command.test.cpp
libs/shell/src/: command_dispatcher.cpp  command_parser.cpp  line_editor.cpp  shell_engine.cpp
libs/shell/tests/: CMakeLists.txt  command_dispatcher.test.cpp  command_parser.test.cpp  line_editor.test.cpp  shell_engine.test.cpp
tests/: CMakeLists.txt
tests/app/storage/: adc_board_persistent_configuration.test.cpp  persistent_configuration.test.cpp
tests/app/telemetry/: sensor_rtt_schema_frame_builder.test.cpp  sensor_rtt_stream_capture.test.cpp
tests/domain/config/: config_validator.test.cpp  transactional_config_dictionary.test.cpp
tests/domain/hash/: crc32.test.cpp
tests/domain/sensors/: capture_sensor_state.test.cpp  processed_sensor_group.test.cpp  sensor_member_reader.test.cpp  sensor_registry.test.cpp  sensor_state.test.cpp
tests/domain/shell/: command_dispatcher.test.cpp  line_editor.test.cpp  shell_engine.test.cpp
(+672 files in other folders)
